[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "xxs3315_electron-clipboard-files-napi-rs"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
clipboard-rs = "0.2.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true

[build.env]
passthrough = [
  "RUST_BACKTRACE=1",
]
